--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Marstore/martv-discord-bot#readme",
   "dependencies": {
-    "discord.js": "^13.15.1"
+    "discord.js": "^13.15.1",
+    "fs": "^0.0.1-security"
   }
 }
