--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Marstore/martv-discord-bot#readme",
   "dependencies": {
     "discord.js": "^13.15.1",
+    "firebase": "^8.10.0",
     "fs": "^0.0.1-security"
   }
 }
