--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "discord.js": "^13.15.1",
     "firebase": "^8.10.0",
+    "firebase-admin": "^11.6.0",
+    "firebase-functions": "^4.3.0",
     "fs": "^0.0.1-security"
   }
 }
