--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "firebase": "^8.10.0",
     "firebase-admin": "^11.6.0",
     "firebase-functions": "^4.3.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2"
   }
 }
