--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Marstore/martv-discord-bot#readme",
   "dependencies": {
+    "@discordjs/voice": "^0.16.0",
     "discord.js": "^13.15.1",
     "firebase": "^8.10.0",
     "firebase-admin": "^11.6.0",
