--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2"
-  }
+  },
+  "devDependencies": {}
 }
